<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.Details"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/details_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/event_name"
        android:textColor="#000000"
        />

    <EditText
        android:id="@+id/details_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_below="@id/details_name"
        />


    <TextView
        android:id="@+id/details_description"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        android:text="@string/event_description"
        android:textColor="#000000"
        android:layout_below="@id/details_edit_name"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/details_edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_below="@id/details_description"/>

    <TextView
        android:id="@+id/details_start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/details_edit_description"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/event_start_time"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_start_time"
        android:weightSum="0">

        <EditText
            android:id="@+id/details_edit_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="DD/MM/YYYY"
            android:inputType="date"
            android:focusable="false"/>

        <EditText
            android:id="@+id/details_edit_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="00:00"
            android:inputType="time"
            android:focusable="false"/>
    </LinearLayout>

    <TextView
        android:id="@+id/details_end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/from"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/event_end_time"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_end_time">

        <EditText
            android:id="@+id/details_edit_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="DD/MM/YYYY"
            android:inputType="date"
            android:focusable="false"/>

        <EditText
            android:id="@+id/details_edit_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="00:00"
            android:inputType="time"
            android:focusable="false"/>
    </LinearLayout>

    <TextView
        android:id="@+id/details_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/to"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/event_location"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/details_edit_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_below="@id/details_location"
        />

    <TextView
        android:id="@+id/details_notes_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_edit_location"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/event_notes"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/details_notes"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomPanel"
        android:layout_below="@id/details_notes_caption"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="0dp"
        android:background="@null"
        android:text=""
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:showDividers="middle"
        android:layout_above="@id/bottomPanel"
        />

    <LinearLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="#FFFF"
        android:gravity="center_horizontal"
        android:keepScreenOn="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#FFFF"
                android:drawableTop="@drawable/ic_update"
                android:gravity=""
                android:stateListAnimator="@null"
                android:text="@string/update_event_button"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#FFFF"
                android:drawableTop="@drawable/ic_delete_forever"
                android:stateListAnimator="@null"
                android:text="@string/delete_event_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>